2019-04-30  Mark Wielaard  <mark@klomp.org>

	* note_xlate.h (elf_cvt_note): Indicate we only translated the note
	header if we ran out of data by updating len, src and dest.

2019-04-01  Mao Han  <han_mao@c-sky.com>

	* elf.h: Update from glibc.

2019-03-07  Mark Wielaard  <mark@klomp.org>

	* elf32_updatefile.c (updatemmap): Use posix_memalign instead of
	aligned_alloc.

2019-03-06  Mark Wielaard  <mark@klomp.org>

	* elf32_updatefile.c (updatemmap): Free scns before returning
	allocation failure.

2019-02-24  Mark Wielaard  <mark@klomp.org>

	* gelf_xlate.c (__elf_xfctstof): Remove alias.
	* libelfP.h (__elf_xfctstof): Remove definition.

2019-02-24  Mark Wielaard  <mark@klomp.org>

	* elf32_fsize.c (local_strong_alias): Remove definition.
	(msize): Remove alias.
	* libelfP.h (__elf32_msize): Remove definition.
	(__elf64_msize): Likewise.

2019-02-21  Mark Wielaard  <mark@klomp.org>

	* common.h (determine_kind): Only accept EV_CURRENT.
	* elf32_fsize.c (fsize): Just check version is EV_CURRENT.
	Use __libelf_type_size without version dimension.
	* elf32_updatefile.c (updatemmap): Define fctp from __elf_xfctstom
	without version dimension.
	(updatefile): Likewise.
	* elf32_updatenull.c (default_ehdr): Check e_version is EV_CURRENT.
	(updatenull_wrlock): Check d_version is EV_CURRENT.
	(elf32_xlatetof): Likewise. And get recsize without version
	dimension from __elf_xfctstom.
	(elf32_xlatetom): Likewise.
	* elf_begin.c (elf_begin): Check __libelf_version is EV_CURRENT.
	* elf_compress.c (__libelf_reset_rawdata): Set d_version to
	EV_CURRENT.
	* elf_getdata.c (shtype_map): Remove version dimension.
	(__libelf_type_aligns): Likewise.
	(__libelf_data_type): Use shtype_map without version dimension.
	(convert_data): Remove unused version argument. Get fp from
	__elf_xfctstom without version dimensions.
	(__libelf_set_data_list_rdlock): Call convert_data without version.
	* elf_getdata_rawchunk.c (elf_getdata_rawchunk): Call __elfcfctstom